=== Version 3.6.10 build ===
- Changed scheme for encoding mail headers from 'Q' to 'B'
- Added a warning in case a file is uploaded with the same name as an existing one that has not write permissions
- Fixed showing a success message in "contact us", even if the email was not sent
- Fixed "more info" link not displaying as link
- Fixed scorm export for packets with non-english files
- Fixed issue about downloading language files
- Fixed issue about access forum page in lesson with instance_source
- Fixed issue about uploading avatar with same name more than one times

=== Version 3.6.10 build 12151 ===
- Added visible option functionality in custom user profile fields
- Added ability to import users with subtypes via csv imports.
- Added "security module"
- Replaced decimal point and thousand separator with locale equivalents
- Security update: Fixed editor's "save template" not checking validity of inputted parameter (Reported by EgiX)
- Security update: Fixed unsafe file upload using capitalized extensions (Reported by EgiX)
- Security update: Fixed potential XSS attacks using unsafe GET parameters (Reported by Canberk Bolat of Mavituna Security and High-Tech Bridge SA Security Research Lab)
- Security update: Fixed possible sql injection attacks in multiple files (Reported by EgiX, Vulnerability Research Laboratory and High-Tech Bridge SA Security Research Lab)
- Security update: Fixed potential privilege escalation using cookies (Reported by EgiX)
- Security update: Fixed cookie information leaking using XSS (Reported by Semyon Perepelitsa)
- Security update: Fixed arbitrary file download issue (Reported by EgiX)
- Fixed "branchinfo" and "groupinfo" fields not appearing in user profile fields (Enterprise/Educational editions)
- Fixed issue about content tree management order
- Fixed issue about assigning users to branches page when filter was used (#1819)
- Fixed clearDuplicates for questions when copying questions from another lesson (#1812)